# spider-weston

./: LICENSE  README.md  meson.build
build-aux/: cargo.sh
client/: Cargo.toml  meson.build
protocol/: shell.xml  test-shell.xml
shell/: libweston_iface.h  main.c  meson.build  shell.c  shell.h
shell/protocol/: meson.build
shell/shell/: meson.build  shell.c  shell.h
